[gd_scene load_steps=3 format=2]

[ext_resource path="res://Quest Model/Quest Pusher/Main.gd" type="Script" id=1]
[ext_resource path="res://Speech Pusher/Add.svg" type="Texture" id=2]

[node name="Main" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Panel" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="Container" type="VBoxContainer" parent="Panel"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 10.0
margin_top = 10.0
margin_right = -10.0
margin_bottom = -10.0

[node name="Menu" type="HBoxContainer" parent="Panel/Container"]
margin_right = 780.0
margin_bottom = 30.0
rect_min_size = Vector2( 0, 30 )

[node name="btnOpen" type="Button" parent="Panel/Container/Menu"]
margin_right = 47.0
margin_bottom = 30.0
text = "Open"

[node name="openDialog" type="FileDialog" parent="Panel/Container/Menu/btnOpen"]
margin_left = 154.0
margin_top = 102.0
margin_right = 608.0
margin_bottom = 466.0
rect_min_size = Vector2( 150, 52.5 )
window_title = "Open a File"
resizable = true
dialog_text = "amongus"
mode = 0
access = 2
filters = PoolStringArray( "json" )

[node name="btnSave" type="Button" parent="Panel/Container/Menu"]
margin_left = 51.0
margin_right = 92.0
margin_bottom = 30.0
text = "Save"

[node name="btnSaveas" type="Button" parent="Panel/Container/Menu"]
margin_left = 96.0
margin_right = 157.0
margin_bottom = 30.0
text = "Save As"

[node name="saveasDialog" type="FileDialog" parent="Panel/Container/Menu/btnSaveas"]
margin_left = 154.0
margin_top = 102.0
margin_right = 608.0
margin_bottom = 466.0
rect_min_size = Vector2( 150, 52.5 )
popup_exclusive = true
resizable = true
access = 2

[node name="Edit" type="HBoxContainer" parent="Panel/Container"]
margin_top = 34.0
margin_right = 780.0
margin_bottom = 70.0
rect_min_size = Vector2( 0, 36 )
focus_neighbour_top = NodePath("../Menu")
focus_neighbour_bottom = NodePath("../Data")

[node name="LineEdit" type="LineEdit" parent="Panel/Container/Edit"]
margin_right = 200.0
margin_bottom = 36.0
rect_min_size = Vector2( 200, 16 )
max_length = 255
expand_to_text_length = true
clear_button_enabled = true
placeholder_text = "Set Text Here"

[node name="btnPush" type="Button" parent="Panel/Container/Edit"]
margin_left = 204.0
margin_right = 247.0
margin_bottom = 36.0
text = "Push"

[node name="labelSpeech" type="Label" parent="Panel/Container/Edit"]
margin_left = 251.0
margin_top = 11.0
margin_right = 251.0
margin_bottom = 25.0

[node name="btnAddSpeech" type="OptionButton" parent="Panel/Container/Edit"]
margin_left = 255.0
margin_right = 300.0
margin_bottom = 36.0
icon = ExtResource( 2 )

[connection signal="pressed" from="Panel/Container/Menu/btnOpen" to="." method="_on_btnOpen_pressed"]
[connection signal="pressed" from="Panel/Container/Menu/btnSave" to="." method="_on_btnSave_pressed"]
[connection signal="pressed" from="Panel/Container/Menu/btnSaveas" to="." method="_on_btnSaveas_pressed"]
